<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/what_ur_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"

        />

    <EditText
        android:id="@+id/getUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:imeOptions="actionUnspecified"
        android:textColor="@color/black"
        android:text="@string/name"
        android:textSize="15sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:onClick="clearNameBox"
        />

    <TextView
        android:id="@+id/textViewUserNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/what_ur_nickname"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"

        />


    <EditText
        android:id="@+id/getUserNickName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:imeOptions="actionUnspecified"
        android:textColor="@color/black"
        android:text="@string/nickname"
        android:textSize="15sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"
        android:onClick="clearNickNameBox"

        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_time_morning"
        android:onClick="showTimePickerDialogMorning"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_time_night"
        android:onClick="showTimePickerDialogNight"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_time_daily_training"
        android:onClick="showTimePickerDialogDaily"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"

        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_start"
        android:onClick="moveToNextActivity"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"

        />
</LinearLayout>